--- a/src/main/resources/races.yml
+++ b/src/main/resources/races.yml
@@ -47,7 +47,7 @@ Races:
     # Lore
     Lore: 'Vladian are good in combat but are not very well miner.'
     # Emblem code (64 colors codes separated with ';')
-    Emblem: 7;7;7;7;7;7;7;7;7;7;7;3;3;7;7;7;7;3;7;3;3;7;3;7;7;3;3;3;3;3;3;7;7;7;3;3;3;3;7;7;7;7;3;3;3;3;7;7;7;7;7;7;7;7;7;7;7;3;7;7;7;7;3;7;7
+    Emblem: 7;7;7;7;7;7;7;7;7;7;7;3;3;7;7;7;7;3;7;3;3;7;3;7;7;3;3;3;3;3;3;7;7;7;3;3;3;3;7;7;7;7;3;3;3;3;7;7;7;7;7;7;7;7;7;7;7;3;7;7;7;7;3;7
     # Material ID
     Item: IRON_SWORD
   Sturgian:
@@ -58,7 +58,7 @@ Races:
     Name: Sturgian
     Color: '&3'
     Lore: 'Sturgian are weak but can mine a lot faster.'
-    Emblem: 7;5;7;7;7;7;5;7;5;7;7;5;5;7;7;5;5;5;7;5;5;7;5;5;7;5;5;7;7;5;5;7;7;7;5;5;5;5;7;7;7;7;5;5;5;5;7;7;7;5;5;5;5;5;5;7;5;5;5;5;5;5;5;5;7
+    Emblem: 7;5;7;7;7;7;5;7;5;7;7;5;5;7;7;5;5;5;7;5;5;7;5;5;7;5;5;7;7;5;5;7;7;7;5;5;5;5;7;7;7;7;5;5;5;5;7;7;7;5;5;5;5;5;5;7;5;5;5;5;5;5;5;5
     Item: IRON_PICKAXE
   Townsman:
     Slot: 13
@@ -68,7 +68,7 @@ Races:
     Name: Townsman
     Color: '&e'
     Lore: 'Townsman are a little bit slow but get less damage.'
-    Emblem: 7;7;7;7;7;7;7;7;7;7;7;7;4;4;4;7;7;7;7;4;4;4;4;4;7;7;7;7;4;4;4;7;7;7;7;7;4;4;4;7;7;7;7;7;7;4;7;7;4;4;4;7;4;4;4;7;7;7;4;4;4;4;4;4;7
+    Emblem: 7;7;7;7;7;7;7;7;7;7;7;7;4;4;4;7;7;7;7;4;4;4;4;4;7;7;7;7;4;4;4;7;7;7;7;7;4;4;4;7;7;7;7;7;7;4;7;7;4;4;4;7;4;4;4;7;7;7;4;4;4;4;4;4
     Item: WHEAT
   Khuzait:
     Slot: 14
@@ -78,7 +78,7 @@ Races:
     Name: Khuzait
     Color: '&a'
     Lore: 'Khuzait are slow for mine but can jump at more blocks.'
-    Emblem: 7;7;7;7;7;7;7;7;7;b;7;7;b;7;b;7;7;7;7;b;b;7;7;7;7;b;7;b;7;7;b;7;b;7;b;7;7;b;7;b;7;b;7;b;b;7;b;7;7;7;7;7;7;7;7;7;7;7;7;b;b;7;7;7;7
+    Emblem: 7;7;7;7;7;7;7;7;7;b;7;7;b;7;b;7;7;7;7;b;b;7;7;7;7;b;7;b;7;7;b;7;b;7;b;7;7;b;7;b;7;b;7;b;b;7;b;7;7;7;7;7;7;7;7;7;7;7;7;b;b;7;7;7
     Item: RABBIT_FOOT
   Battanian:
     Slot: 15
@@ -88,5 +88,5 @@ Races:
     Name: Battanian
     Color: '&4'
     Lore: 'Battanian get hunger faster but have small regeneration.'
-    Emblem: 7;7;7;8;8;7;7;7;7;8;7;8;8;7;7;7;8;7;7;8;7;7;7;7;8;8;8;8;8;8;8;7;7;7;8;8;8;7;7;8;7;7;8;8;8;7;7;7;7;7;8;7;8;7;7;7;7;8;8;7;8;8;7;7;7
+    Emblem: 7;7;7;8;8;7;7;7;7;8;7;8;8;7;7;7;8;7;7;8;7;7;7;7;8;8;8;8;8;8;8;7;7;7;8;8;8;7;7;8;7;7;8;8;8;7;7;7;7;7;8;7;8;7;7;7;7;8;8;7;8;8;7;7
     Item: GOLDEN_APPLE
